--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "form-data": "^4.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
+    "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3"
   }
